Check in Turbine integration test golden outputs
Instead of running javac in-process to regenerate expected test outputs on
every test execution, check them in and add a separate test to ensure they
remain in sync with javac.

Also move some per-test configuration (like javacopts) to yaml frontmatter in
the `.test` inputs, and switch to `TestParameterInjector` for parameterized
tests.

PiperOrigin-RevId: 977728303